Modified executable so it produces output log

--- a/PVBatterySystem/PackagingLog.html
+++ b/PVBatterySystem/PackagingLog.html
@@ -1,5 +1,5 @@
 <html><meta charset="UTF-8"><pre>
-<font color=blue>mcc -o PVBatterySystem -W main:PVBatterySystem -T link:exe -d U:\NREL\PVTesBattery\PVBatterySystem\for_testing -v 'U:\NREL\PVTesBattery\New code\PV_Battery_New.m' -a 'U:\NREL\PVTesBattery\New code\elecPrices.csv' -a 'U:\NREL\PVTesBattery\New code\Load Data' -a 'U:\NREL\PVTesBattery\New code\PV_Battery_New.m' -a 'U:\NREL\PVTesBattery\New code\TMY3 Data' -r 'C:\Program Files\MATLAB\R2019a\toolbox\compiler\Resources\default_icon.ico' </font>
+<font color=blue>mcc -o PVBatterySystem -W main:PVBatterySystem -T link:exe -d U:\NREL\PVTesBattery\PVBatterySystem\for_testing -R '-logfile,output.txt' -v 'U:\NREL\PVTesBattery\New code\PV_Battery_New.m' -a 'U:\NREL\PVTesBattery\New code\elecPrices.csv' -a 'U:\NREL\PVTesBattery\New code\Load Data' -a 'U:\NREL\PVTesBattery\New code\PV_Battery_New.m' -a 'U:\NREL\PVTesBattery\New code\TMY3 Data' -r 'C:\Program Files\MATLAB\R2019a\toolbox\compiler\Resources\default_icon.ico' </font>
 Compiler version: 7.0.1 (R2019a)
 
 Dependency analysis by REQUIREMENTS.
